--- a/index.html
+++ b/index.html
@@ -4,6 +4,33 @@
   <title>Rapport Canal Plus</title>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> <style>
+    body {
+        font-family: 'Roboto', Arial, sans-serif;
+        background-color: #f5f5f5;
+        padding: 30px;
+        margin: 0;
+    }
+    h1 {
+        text-align: center;
+        color: #4CAF50;
+        margin-bottom: 30px;
+    }
+    button {
+        background-color: #4CAF50;
+        margin: 0px 65px 0px 65px;
+        color: white;
+        padding: 12px 24px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        font-size: 16px;
+        transition: background-color 0.3s ease;
+    }
+    
+    .btn:hover {
+        background-color: #45a049;
+    }
 
     <style>
         body {
@@ -197,12 +224,12 @@
       <form id="form">
         <div class="input-group">
           <span class="input-group-text">Date du début et de fin du rapport</span>
-          <input type="date" aria-label="First name" class="form-control">
-          <input type="date" aria-label="Last name" class="form-control">
+          <input type="date" id="startDate" name="startDate" aria-label="First name" class="form-control" required>
+          <input type="date" id="endDate" name="endDate" aria-label="Last name" class="form-control" required>
         </div>
 
-        <select class="form-select mt-2" aria-label="Default select example" id="select">
-          <option selected>Selectionner un véhicule</option>
+        <select name="voiture" id="voiture" class="form-select mt-2" aria-label="Default select example" required>
+          <option value="">Selectionner un véhicule</option>
         </select>
 
         <div class="my-4 d-flex justify-content-end">
@@ -214,27 +241,29 @@
       
         <section class="container">
           <h1 class="my-4 fs-4">Rapport sur le kilométrage mensuel d'une voiture</h1>
-        <table class="table">
+        <table class="table" id="kilometrageTable">
           <thead>
             <tr>
               <th scope="col">Nom du véhicule</th>
               <th scope="col">Date du début</th>
               <th scope="col">Date de fin</th>
-              <th scope="col">Kilométrage mensuel</th>
+              <th scope="col">Kilométrage</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <th scope="row">1</th>
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
+              <th scope="row" id="nameV">----</th>
+              <td id="dateDebut">----</td>
+              <td id="dateFin">----</td>
+              <td id="kilometrage">----</td>
             </tr>
           </tbody>
         </table>
       </section>
    
-
+<div class="container d-flex justify-content-end">
+  <button type="button" class="btn btn-info"><i class="fa-solid fa-file-pdf"></i>PDF</button>
+</div>
    
    <footer>
         <p> Données du compte CANAL PLUS RDC. <br>&copy; 2024 Rapport d'Analyse Version Test 
