--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
         <td><img src="téléchargement.png" alt="Logo" class="logo"></td>
         <td>
           <div class="driver-info">
-            <span>John Doe</span>
-            <span>Immatriculation : AB123CD</span>
-            <span>Marque de voiture : Toyota Prius</span>
+            <span>User : Alain Muluwayi</span>
+            <span>Email : alain.muluwayi@gmail.com</span>
+            <span>Compte : Canal Plus RDC</span>
           </div>
         </td>
         <td>
