--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"> 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+
   <style>
 
     body {
@@ -265,7 +267,7 @@
       </section>
    
 <div class="container d-flex justify-content-end">
-  <button type="button" class="btn btn-info"><i class="fa-solid fa-file-pdf"></i>PDF</button>
+  <button type="button" class="btn btn-info" onclick="generatePDF()"><i class="fa-solid fa-file-pdf"></i>PDF</button>
 </div>
    
    <footer>
